// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.eventsframework.entity_crud.account;

option java_multiple_files = true;
option go_package = "953_events_api";

message AccountEntityChangeDTO {
  string accountId = 1;
}
